# ComfyUI-Gemini_Flash_2.0_Exp

./: Gemini_Flash_Node.py  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
nodes/: Gemini_Flash_Node.py  nodes_audio_recorder.py
web/: main.js
workflow/: Gemini audio analysis.json  Gemini basic image generation.json  Gemini chat mode.json  Gemini image analysis.json  Gemini image generation - multi image.json  Gemini image generation.json  Gemini video analysis.json  Gemini 🎤 Audio Recorder .json  Voice Recorder -Gemini_Flash_2.0_Exp.json  _Smart Voice Recorder -Gemini_Flash_2.0_Exp.json  workflow for Gemini_Flash_2.0_Exp.json
