[project]
name = "comfyui-gemini-flash"
version = "0.1.0"
description = "A ComfyUI custom node that integrates Google's Gemini Flash 2.0 Experimental model"
authors = [
    { name = "Shmuel Ronen" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "google-generativeai>=0.4.1",
    "pillow",
    "torchaudio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit"
]

[tool.comfy-nodes]
publisher = "@shmuel"